# surblclient

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  surbl.py  surblclient.py  test_surblclient.py
.github/workflows/: ci.yml
surblclient/: __init__.py  blacklist.py  surbl-two-level-tlds  surbl.py  uribl.py
surblclient/data/surbl/: three-level-tlds
tests/: test_surblclient.py
