[tool.poetry]
name = "surblclient"
version = "0.1.0"
description = "Client library for querying SURBL and other RBL blocklists"
authors = ["Filip Salomonsson <filip.salomonsson@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/filipsalomonsson/surblclient"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
